--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,7 +71,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/.env
-    - assets/images/
+    - assets/images/chef.png
+    - assets/images/logo.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
